--- a/Resources/pipeline-pioneers-db.yml
+++ b/Resources/pipeline-pioneers-db.yml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Pod
 metadata:
   name: pipeline-db
-  namespace: stuart-space
+  namespace: pipeline-pioneers
   labels:
     app: pipeline-postgres
 spec:
@@ -23,4 +23,6 @@ spec:
           name: db-data
   volumes:
     - name: db-data
-      emptyDir: {}
+      awsElasticBlockStore:
+        volumeID: "vol-0588f9f5be435903c"
+        fsType: ext4
