--- a/BankAppP2/Dockerfile
+++ b/BankAppP2/Dockerfile
@@ -2,7 +2,7 @@ FROM openjdk:8-jre
 
 ENV db_username=postgres
 ENV db_password=password
-ENV db_url=jdbc:postgresql://pipeline-postgres:5432/postgres
+ENV db_url=jdbc:postgresql://pipeline-db:5432/postgres
 
 COPY target/BankAppP2-1.0-SNAPSHOT.jar demo.jar
 
