--- a/Resources/pipeline-pioneers-deployment.yml
+++ b/Resources/pipeline-pioneers-deployment.yml
@@ -8,6 +8,12 @@ metadata:
 
 spec: # Specifications for the deployment.
   replicas: 3
+  minReadySeconds: 5
+  strategy:
+    type: RollingUpdate
+    rollingUpdate:
+      maxSurge: 1
+      maxUnavailable: 0
   selector:
     matchLabels:
       app: pipeline-pioneers-app # has to match the template labels app
