--- a/.gitignore
+++ b/.gitignore
@@ -97,6 +97,9 @@ local.properties
 .idea/**/gradle.xml
 .idea/**/libraries
 
+# Sonar
+.idea/sonarlint
+
 # Gradle and Maven with auto-import
 # When using Gradle or Maven with auto-import, you should exclude module files,
 # since they will be recreated, and may cause churn.  Uncomment if using
