--- a/BankAppP2/Jenkinsfile
+++ b/BankAppP2/Jenkinsfile
@@ -8,7 +8,7 @@ pipeline {
 	stages {
 		stage("Maven build"){
 				steps {
-					sh '/usr/bin/mvn clean package'
+					sh '/usr/bin/mvn -f BankAppP2/pom.xml clean package'
 				}
 			}
 		stage("Docker build") {
