--- a/Resources/pipeline-pioneers-deployment.yml
+++ b/Resources/pipeline-pioneers-deployment.yml
@@ -8,12 +8,6 @@ metadata:
 
 spec: # Specifications for the deployment.
   replicas: 3
-  minReadySeconds: 5
-  strategy:
-    type: RollingUpdate
-    rollingUpdate:
-      maxSurge: 1
-      maxUnavailable: 0
   selector:
     matchLabels:
       app: pipeline-pioneers-app # has to match the template labels app
@@ -28,4 +22,8 @@ spec: # Specifications for the deployment.
           ports:
             - containerPort: 7500
           imagePullPolicy: Always # Optional spec, whenever we redeploy it will always pull the image from the remote repo
+	    resources:
+		limits:
+		  memory: "128Mi"
+		  cpu: "500m"
 
